@@ -41,7 +41,6 @@ class ClientShutdownCrossVersionSpec extends ToolingApiSpecification {
 
         when:
         GradleConnector.newConnector()
-
         then:
         IllegalStateException e = thrown()
     }
@@ -67,7 +66,7 @@ class ClientShutdownCrossVersionSpec extends ToolingApiSpecification {
     def "cleans up busy daemons once they become idle when tooling API session is shutdown"() {
         given:
         buildFile << """
-task slow << { new URL("${server.uri}").text }
+task slow { doLast { new URL("${server.uri}").text } }
 """
 
         toolingApi.requireIsolatedDaemons()
@@ -132,6 +131,8 @@ task slow << { new URL("${server.uri}").text }
     }
 
     private GradleExecuter daemonExecutor() {
-        targetDist.executer(temporaryFolder).withDaemonBaseDir(toolingApi.daemonBaseDir).withArguments("--daemon").requireGradleHome()
+        // Need to use the same JVM args to start daemon as those used by tooling api fixture
+        // TODO - use more sane JVM args here and for the daemons started using tooling api fixture
+        targetDist.executer(temporaryFolder).withNoExplicitTmpDir().withDaemonBaseDir(toolingApi.daemonBaseDir).withBuildJvmOpts("-Xmx1024m", "-XX:MaxPermSize=256m", "-XX:+HeapDumpOnOutOfMemoryError").useDefaultBuildJvmArgs().requireDaemon()
     }
 }
